chore: changed selectors css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="ti-arrow-right"></span>
             </a>
         </div>
-        <div class="col-md-5 hidden-xs">
+        <div class="col-md-5">
             <img src="img/bingo-logo3.png" class="rocket animated bounce">
         </div>
     </div>
