--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <div class="col-sm-offset-3 col-sm-9">
+                  <div class="col-sm-offset-3 col-sm-9" style="display: grid; align-items: center;">
                     <button v-if="!submitted" type="button" @click="submitForm" class="btn btn-yellow pull-right" style="color: #ffffff;">
                       Отправить
                       <span class="ti-arrow-right"></span>
