--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <div class="col-sm-offset-3 col-sm-9" style="display: grid; align-items: center;">
+                  <div class="col-sm-offset-3 col-sm-9">
                     <button
                         v-if="!submitted"
                         type="button"
@@ -363,7 +363,7 @@
                         @touchstart="submitForm"
                         @touchhend="submitForm"
                         class="btn btn-yellow pull-right"
-                        style="color: #ffffff;">
+                        style="position: absolute; color: #ffffff;">
                       Отправить
                       <span class="ti-arrow-right"></span>
                     </button>
@@ -373,7 +373,7 @@
               <div v-if="successMessage" class="alert alert-success">
                 Форма успешно отправлена!
               </div>
-              <div v-if="errorMessage" class="alert alert-danger">
+              <div v-if="errorMessage" class="alert alert-danger" style="margin-top: 70px;">
                 {{ errorMessage }}
               </div>
             </div>
