--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
                         this.submitted = true;
                         this.successMessage = true;
                         this.successMessageText = data.message
+                        return
                     }
 
                     this.errorMessage = true;
