--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                   </div>
                 </div>
               </form>
-              <div v-if="successMessage" class="alert alert-success">
+              <div v-if="successMessage" class="alert alert-success" style="margin-top: 70px;">
                 {{ successMessageText }}
               </div>
               <div v-if="errorMessage" class="alert alert-danger" style="margin-top: 70px;">
