chore: changed url

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 }
 
 
-                const response = await fetch('http://localhost:8864/registration', {
+                const response = await fetch('http://95.163.222.56:8864/registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
