--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 } catch (e){
                     this.submitted = false
                     this.error = true
-                    this.message = 'Ошибка: ' . e.message ? e.message : 'internal server error'
+                    this.message = 'Ошибка: internal server error'
                 }
             }
         }
