--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 }
 
                 try{
-                    const response = await fetch('https://localhost/registration', {
+                    const response = await fetch('https://95.163.222.56:8864/registration', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
