--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 submitted: false,
                 error: false,
                 message: '',
-                tg: window.Telegram.WebApp
+                tg: window.Telegram
             };
         },
         mounted() {
