--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 submitted: false,
                 error: false,
                 message: '',
-                tg: window.Telegram
+                // tg: window.Telegram
             };
         },
         mounted() {
@@ -367,7 +367,7 @@
                     })
 
                     // console.log(this.tg.sendData(data))
-                    console.log(tg)
+                    // console.log(tg)
                 } catch (e){
                     this.submitted = false
                     this.error = true
