--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@
                 }
 
                 try{
+                    window.Telegram.WebApp.sendData(JSON.stringify(data));
+
                     let data = JSON.stringify({
                         name: this.formData.name,
                         surname: this.formData.surname,
