--- a/index.html
+++ b/index.html
@@ -358,8 +358,6 @@
                 }
 
                 try{
-                    window.Telegram.WebApp.sendData(JSON.stringify(data));
-
                     let data = JSON.stringify({
                         name: this.formData.name,
                         surname: this.formData.surname,
@@ -367,6 +365,9 @@
                         position: this.formData.position,
                         telegram_id: this.formData.telegram_id === '' ? 0 :  parseInt(this.formData.telegram_id)
                     })
+
+                    // window.test = window.Telegram
+                    window.Telegram.WebApp.sendData(JSON.stringify(data));
 
                     this.submitted = true
                     this.error = false
