--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
                     // window.test = window.Telegram
                     window.Telegram.WebApp.sendData(JSON.stringify(data));
 
+                    console.log(window.Telegram)
+                    console.log(window.Telegram.WebApp)
+
                     this.submitted = true
                     this.error = false
                     this.message = 'Успешно'
